@@ -182,34 +182,74 @@
         </layout>
        </item>
        <item row="1" column="0" colspan="2">
+        <layout class="QHBoxLayout" name="settingsLevelLayout">
+         <property name="spacing">
+          <number>0</number>
+         </property>
+         <property name="margin">
+          <number>0</number>
+         </property>
+         <item>
+          <spacer name="horizontalSpacer">
+           <property name="orientation">
+            <enum>Qt::Horizontal</enum>
+           </property>
+           <property name="sizeHint" stdset="0">
+            <size>
+             <width>20</width>
+             <height>2</height>
+            </size>
+           </property>
+          </spacer>
+         </item>
+         <item>
+          <widget class="QPushButton" name="settingsLevelButton">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Maximum" vsizetype="Maximum">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
+          </widget>
+         </item>
+        </layout>
+       </item>
+       <item row="2" column="0" colspan="2">
         <widget class="NoteLabel" name="musicFolderNoteLabel">
          <property name="text">
-          <string>The 'Music folder' setting is used to lookup cover-art (either the value specified above, or &lt;code&gt;cover.jpg / cover.png&lt;/code&gt; if not set). If you also have write permissions to this folder (and it's sub-folders), then Cantata will save any downloaded covers into the respective album folder.</string>
+          <string>The 'Music folder' setting is used to lookup cover-art. If you also have write permissions to this folder (and it's sub-folders), then Cantata will save any downloaded covers into the respective album folder.</string>
          </property>
         </widget>
        </item>
-       <item row="2" column="0" colspan="2">
+       <item row="3" column="0" colspan="2">
+        <widget class="NoteLabel" name="coverNameNoteLabel">
+         <property name="text">
+          <string>If no setting is specified for 'Cover filename', then Cantata will use a default of &lt;code&gt;cover&lt;/code&gt;</string>
+         </property>
+        </widget>
+       </item>
+       <item row="4" column="0" colspan="2">
         <widget class="NoteLabel" name="socketNoteLabel">
          <property name="text">
           <string>When using a local socket the full absolute path to the socket needs to be set. (Port number is not required.)</string>
          </property>
         </widget>
        </item>
-       <item row="3" column="0" colspan="2">
+       <item row="5" column="0" colspan="2">
         <widget class="NoteLabel" name="topLevelNoteLabel">
          <property name="text">
           <string>If your MPD is configured to use a UPnP/DLNA backend, then 'Top-level music path' should be set to the 'All Music' path (e.g. servername\Music\All Music\) to prevent duplicate tracks. If this setting is used, then Cantata will only list tracks that are under this MPD path. For most MPD setups, this setting should be left blank. Changes to this setting will require a full refresh of the database.</string>
          </property>
         </widget>
        </item>
-       <item row="4" column="0" colspan="2">
+       <item row="6" column="0" colspan="2">
         <widget class="NoteLabel" name="streamUrlNoteLabel">
          <property name="text">
           <string>'HTTP Stream URL' is only of use if you have MPD configured to output to a HTTP stream, and you wish Cantata to be able to play that stream.</string>
          </property>
         </widget>
        </item>
-       <item row="4" column="0">
+       <item row="7" column="0">
         <spacer name="verticalSpacer_2">
          <property name="orientation">
           <enum>Qt::Vertical</enum>
@@ -276,20 +316,53 @@
         </layout>
        </item>
        <item row="2" column="0" colspan="4">
+        <layout class="QHBoxLayout" name="basicSettingsLevelLayout">
+         <property name="spacing">
+          <number>0</number>
+         </property>
+         <property name="margin">
+          <number>0</number>
+         </property>
+         <item>
+          <spacer name="basicHorizontalSpacer">
+           <property name="orientation">
+            <enum>Qt::Horizontal</enum>
+           </property>
+           <property name="sizeHint" stdset="0">
+            <size>
+             <width>20</width>
+             <height>2</height>
+            </size>
+           </property>
+          </spacer>
+         </item>
+         <item>
+          <widget class="QPushButton" name="basicSettingsLevelButton">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Maximum" vsizetype="Maximum">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
+          </widget>
+         </item>
+        </layout>
+       </item>
+       <item row="3" column="0" colspan="4">
         <widget class="NoteLabel" name="basicMusicFolderNoteLabel">
          <property name="text">
           <string>If you change the 'Music folder' setting, then you will need to manually update the music database. This can be performed by pressing the 'Refresh Database' button in the 'Artists' or 'Albums' views.</string>
          </property>
         </widget>
        </item>
-       <item row="3" column="0" colspan="4">
-        <widget class="NoteLabel" name="musicFolderNoteLabel_2">
+       <item row="4" column="0" colspan="2">
+        <widget class="NoteLabel" name="basicCoverNameNoteLabel">
          <property name="text">
-          <string>If no setting is specified for 'Cover filename, then Cantata will use a default of &lt;code&gt;cover&lt;/code&gt;</string>
+          <string>If no setting is specified for 'Cover filename', then Cantata will use a default of &lt;code&gt;cover&lt;/code&gt;</string>
          </property>
         </widget>
        </item>
-       <item row="4" column="2">
+       <item row="5" column="2">
         <spacer name="expandingSpacer">
          <property name="orientation">
           <enum>Qt::Vertical</enum>
